# mcp-c

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt
docs/: Gemfile  _config.yml  architecture.md  index.md
docs/transports/: README.md  http.md
examples/linux/mcp_server/: CMakeLists.txt  README.md
examples/linux/mcp_server/src/: main.c
examples/zephyr/mcp_server/: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
examples/zephyr/mcp_server/boards/: esp32_devkitc_procpu.conf  esp32_devkitc_procpu.overlay  native_sim.conf  native_sim.overlay
examples/zephyr/mcp_server/include/: wifi.h
examples/zephyr/mcp_server/src/: main.c  wifi.c
include/: internal.h  mcp.h  mcp_server.h  mcp_session.h  mcp_transport.h
scripts/: build-zephyr.sh
src/core/: message.c  session.c
src/server/: server.c
src/transport/: http_transport.c
